force-app/main/default/objects/ilms__Book__c/ilms__Book__c.object-meta.xml
<CustomObject>
    <label>Course</label>
    <nameField>
        <displayFormat>Course - {00000}</displayFormat>
        <label>Course Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>