force-app/main/default/objects/ilms__Book__c/fields/ilms__Auto_Mark_As_Complete__c.field-meta.xml
<CustomField>
    <fullName>ilms__Auto_Mark_As_Complete__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This will automatically select the &#39;Mark as complete&#39; button when the user visits a page.</inlineHelpText>
    <label>Automatically record user Page View</label>
    <type>Checkbox</type>
</CustomField>