force-app/main/default/objects/ilms__Book__c/fields/ilms__Badge_Image__c.field-meta.xml
<CustomField>
    <fullName>ilms__Badge_Image__c</fullName>
    <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+ilms__Book_Badge_Image__c ,&quot;Icon&quot;,50,50)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Badge Image</label>
    <type>Text</type>
</CustomField>