force-app/main/default/objects/ilms__Book__c/fields/ilms__Book_Badge_Image__c.field-meta.xml
<CustomField>
    <fullName>ilms__Book_Badge_Image__c</fullName>
    <label>Badge</label>
    <type>Url</type>
</CustomField>