force-app/main/default/objects/ilms__Book__c/fields/ilms__Book_Badge_Name__c.field-meta.xml
<CustomField>
    <fullName>ilms__Book_Badge_Name__c</fullName>
    <label>Book Badge Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>