force-app/main/default/objects/ilms__Book__c/fields/ilms__Brief__c.field-meta.xml
<CustomField>
    <fullName>ilms__Brief__c</fullName>
    <label>Brief Description (My Learning View)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>