force-app/main/default/objects/ilms__Book__c/fields/ilms__Cannot_DeRegister__c.field-meta.xml
<CustomField>
    <fullName>ilms__Cannot_DeRegister__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove ability to DeRegister</label>
    <type>Checkbox</type>
</CustomField>