force-app/main/default/objects/ilms__Book__c/fields/ilms__Chapters_Count__c.field-meta.xml
<CustomField>
    <fullName>ilms__Chapters_Count__c</fullName>
    <label>Number of Chapters</label>
    <summaryForeignKey>ilms__Chapter__c.ilms__Book__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>