force-app/main/default/objects/ilms__Book__c/fields/ilms__Course_Target_Completions__c.field-meta.xml
<CustomField>
    <fullName>ilms__Course_Target_Completions__c</fullName>
    <inlineHelpText>Set your Target Completion goal. Track the progress by using the &#39;Results - % of Target Goal field&#39;.

Results - % of Target Goal = Number of courses complete / Target Goal.</inlineHelpText>
    <label>Course - Target Completions Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>