force-app/main/default/objects/ilms__Book__c/fields/ilms__Earn_Badge__c.field-meta.xml
<CustomField>
    <fullName>ilms__Earn_Badge__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Earn Badge</label>
    <type>Checkbox</type>
</CustomField>