force-app/main/default/objects/ilms__Book__c/fields/ilms__Expired__c.field-meta.xml
<CustomField>
    <fullName>ilms__Expired__c</fullName>
    <label>Expired</label>
    <type>DateTime</type>
</CustomField>