force-app/main/default/objects/ilms__Book__c/fields/ilms__Instructor__c.field-meta.xml
<CustomField>
    <fullName>ilms__Instructor__c</fullName>
    <label>Instructor</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>