force-app/main/default/objects/ilms__Book__c/fields/ilms__Learn__c.field-meta.xml
<CustomField>
    <fullName>ilms__Learn__c</fullName>
    <label>What you will learn</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>