force-app/main/default/objects/ilms__Book__c/fields/ilms__Libraries__c.field-meta.xml
<CustomField>
    <fullName>ilms__Libraries__c</fullName>
    <label>Libraries</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>