force-app/main/default/objects/ilms__Book__c/fields/ilms__Page_Enable__c.field-meta.xml
<CustomField>
    <fullName>ilms__Page_Enable__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Page Enable (seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>