force-app/main/default/objects/ilms__Book__c/fields/ilms__Percentage__c.field-meta.xml
<CustomField>
    <fullName>ilms__Percentage__c</fullName>
    <defaultValue>0.75</defaultValue>
    <label>Pass Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>