force-app/main/default/objects/ilms__Book__c/fields/ilms__Post_To_Chatter__c.field-meta.xml
<CustomField>
    <fullName>ilms__Post_To_Chatter__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Post to Chatter</label>
    <type>Checkbox</type>
</CustomField>