force-app/main/default/objects/ilms__Book__c/fields/ilms__Published_Date__c.field-meta.xml
<CustomField>
    <fullName>ilms__Published_Date__c</fullName>
    <description>Published on Date</description>
    <label>Published Date</label>
    <type>Date</type>
</CustomField>