force-app/main/default/objects/ilms__Book__c/fields/ilms__Quizzes_Count__c.field-meta.xml
<CustomField>
    <fullName>ilms__Quizzes_Count__c</fullName>
    <label>Number of Quizzes</label>
    <summarizedField>ilms__Chapter__c.ilms__Quizzes_Count__c</summarizedField>
    <summaryForeignKey>ilms__Chapter__c.ilms__Book__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>