force-app/main/default/objects/ilms__Book__c/fields/ilms__Results_Course_Completion__c.field-meta.xml
<CustomField>
    <fullName>ilms__Results_Course_Completion__c</fullName>
    <label>Results - Course Completion</label>
    <summaryFilterItems>
        <field>ilms__User_Book__c.ilms__Status__c</field>
        <operation>equals</operation>
        <value>Pass</value>
    </summaryFilterItems>
    <summaryForeignKey>ilms__User_Book__c.ilms__Book__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>