force-app/main/default/objects/ilms__Book__c/fields/ilms__Results_of_Target_Goal__c.field-meta.xml
<CustomField>
    <fullName>ilms__Results_of_Target_Goal__c</fullName>
    <formula>ilms__Results_Course_Completion__c / ilms__Course_Target_Completions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Track your completed course targets.  Insure you have set a target goal in the &#39;Course Target Completions Goal&#39; field.</inlineHelpText>
    <label>Results - % of Target Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>