force-app/main/default/objects/ilms__Book__c/fields/ilms__Sessions_Count__c.field-meta.xml
<CustomField>
    <fullName>ilms__Sessions_Count__c</fullName>
    <label>Number of Classrooms</label>
    <summaryForeignKey>ilms__Event__c.ilms__Book__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>