force-app/main/default/objects/ilms__Book__c/fields/ilms__Specialities__c.field-meta.xml
<CustomField>
    <fullName>ilms__Specialities__c</fullName>
    <label>Specialities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>