force-app/main/default/objects/ilms__Book__c/fields/ilms__Tags__c.field-meta.xml
<CustomField>
    <fullName>ilms__Tags__c</fullName>
    <description>Tag books, as a JSON object.</description>
    <label>Tags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>