force-app/main/default/objects/ilms__Book__c/fields/ilms__Tags_Count__c.field-meta.xml
<CustomField>
    <fullName>ilms__Tags_Count__c</fullName>
    <label>Tags Count</label>
    <summaryForeignKey>ilms__Book_Tag__c.ilms__Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>