force-app/main/default/objects/ilms__Book__c/fields/ilms__Take_Feedback__c.field-meta.xml
<CustomField>
    <fullName>ilms__Take_Feedback__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Request Feedback</label>
    <type>Checkbox</type>
</CustomField>