force-app/main/default/objects/ilms__Book__c/fields/ilms__Topic__c.field-meta.xml
<CustomField>
    <fullName>ilms__Topic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Topic (Deprecated)</label>
    <referenceTo>ilms__Topic__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Book_Topic</relationshipName>
    <type>Lookup</type>
</CustomField>