force-app/main/default/objects/ilms__Book__c/fields/ilms__Topics__c.field-meta.xml
<CustomField>
    <fullName>ilms__Topics__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Topic</label>
    <referenceTo>ilms__Topics__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>