force-app/main/default/objects/ilms__Book__c/fields/ilms__Total_DisLikes__c.field-meta.xml
<CustomField>
    <fullName>ilms__Total_DisLikes__c</fullName>
    <label>Total DisLikes</label>
    <summaryFilterItems>
        <field>ilms__User_Book__c.ilms__Liking__c</field>
        <operation>equals</operation>
        <value>DisLike</value>
    </summaryFilterItems>
    <summaryForeignKey>ilms__User_Book__c.ilms__Book__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>