force-app/main/default/objects/ilms__Book__c/fields/ilms__Total_Duration__c.field-meta.xml
<CustomField>
    <fullName>ilms__Total_Duration__c</fullName>
    <label>Total Duration (min)</label>
    <summarizedField>ilms__Chapter__c.ilms__Total_Duration__c</summarizedField>
    <summaryForeignKey>ilms__Chapter__c.ilms__Book__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>