force-app/main/default/objects/ilms__Book__c/fields/ilms__Total_Points__c.field-meta.xml
<CustomField>
    <fullName>ilms__Total_Points__c</fullName>
    <formula>($Setup.ilms__IL_Points__c.ilms__Course_Started__c +  $Setup.ilms__IL_Points__c.ilms__Course_Completed__c)+ 
( (ilms__Pages_Count__c - ilms__Quizzes_Count__c)*  $Setup.ilms__IL_Points__c.ilms__Page_Completed__c ) +(  ilms__Quizzes_Count__c *  $Setup.ilms__IL_Points__c.ilms__Quiz_Passed__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>