force-app/main/default/objects/ilms__Book__c/fields/ilms__wasPublished__c.field-meta.xml
<CustomField>
    <fullName>ilms__wasPublished__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the course has been published, this field will be checked.  This prevents any Pages or Quizzes from being added or deleted as this will affect the data integrity.</inlineHelpText>
    <label>wasPublished</label>
    <type>Checkbox</type>
</CustomField>