force-app/main/default/objects/ilms__Book__c/recordTypes/ilms__Instructor.recordType-meta.xml
<RecordType>
    <fullName>ilms__Instructor</fullName>
    <active>true</active>
    <label>Instructor</label>
</RecordType>