force-app/main/default/objects/ilms__Book__c/recordTypes/ilms__Online.recordType-meta.xml
<RecordType>
    <fullName>ilms__Online</fullName>
    <active>true</active>
    <label>Online</label>
</RecordType>