force-app/main/default/objects/ilms__Book__c/recordTypes/ilms__PopUp_Quiz.recordType-meta.xml
<RecordType>
    <fullName>ilms__PopUp_Quiz</fullName>
    <active>false</active>
    <description>If all you need is to show one Page of content or give a Quiz</description>
    <label>PopUp Quiz</label>
</RecordType>