force-app/main/default/objects/ilms__Book__c/listViews/ilms__All.listView-meta.xml
<ListView>
    <fullName>ilms__All</fullName>
    <columns>NAME</columns>
    <columns>ilms__Course_Image__c</columns>
    <columns>ilms__Book_Name__c</columns>
    <columns>ilms__Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>