force-app/main/default/objects/ilms__Book__c/listViews/ilms__Instructor_Lead.listView-meta.xml
<ListView>
    <fullName>ilms__Instructor_Lead</fullName>
    <columns>NAME</columns>
    <columns>ilms__Course_Image__c</columns>
    <columns>ilms__Book_Name__c</columns>
    <columns>ilms__Brief__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ilms__Book__c.ilms__Instructor</value>
    </filters>
    <label>Instructor Lead</label>
</ListView>