force-app/main/default/objects/ilms__Book__c/listViews/ilms__Published.listView-meta.xml
<ListView>
    <fullName>ilms__Published</fullName>
    <columns>NAME</columns>
    <columns>ilms__Course_Image__c</columns>
    <columns>ilms__Book_Name__c</columns>
    <columns>ilms__Brief__c</columns>
    <columns>ilms__Badge_Image__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ilms__Status__c</field>
        <operation>equals</operation>
        <value>Published</value>
    </filters>
    <label>Published</label>
</ListView>